--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,12 +2,8 @@
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<img src="images/brandicon.png" height="50" width="50" class="float-left">
-			<a class="navbar-brand">Angular-Firebase Bus Tracker</a>
-			<div class='collapse navbar-collapse'>
-				<ul class='nav navbar-nav'>
-					<li><a class='btn btn-link' routerLink='/'>Bus List</a></li>
-				</ul>
-			</div>
+			<a class="navbar-brand" routerLink='/'>Angular-Firebase Bus Tracker</a>
+			<div class='collapse navbar-collapse'>	</div>
 		</div>
 	</div>
 </nav>
