Aligned with Kirti's implementation

--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,10 +1,20 @@
-<nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<img src="images/brandicon.png" height="50" width="50" class="float-left">
-			<a class="navbar-brand" routerLink='/'>Angular-Firebase Bus Tracker</a>
-			<div class='collapse navbar-collapse'>	</div>
-		</div>
-	</div>
-</nav>
-<router-outlet></router-outlet>
+<div>
+  <div class="navbar navbar-default">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#" routerLink="/">My Bus</a>
+    </div>
+    <div class="collapse navbar-collapse">
+
+      <ul class="nav navbar-nav">
+        <li><a href="#" routerLink="/admin"> Admin</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="container">
+
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
