--- a/src/busstatus.component.html
+++ b/src/busstatus.component.html
@@ -1,14 +1,23 @@
-<div class="thumbnail col-md-3 col-sm-3 col-lg-3" *ngFor="let bus of buses">
-	<div class="caption"><strong>{{bus.from}} to {{bus.to}}</strong></div>
-
-	<img [src]="bus.imageUrl" />
-	<br>
-	<br>
-	<div style="text-align:center;">{{bus.busId}}
-		<div style="margin-right: 9px;">Last Spotted At: {{bus.lastSpottedAt}}</div>
-		<div style="margin-right: 9px;">Time Last Spotted: {{bus.lastSpottedTime}}</div>
-		<div>To destination: {{bus.kmsToGo}}</div>
-		<div><a class='btn btn-link' [routerLink]="['busedit',bus.busId]">Edit Bus</a></div>
-	</div>
-	<br>
+<div class="row">
+  <div class="col-sm-6" *ngFor="let item of buses | async">
+    <div class="panel panel-default" click="(busSelected(item))">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{item.from}} to {{item.to}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <div>
+              <span>
+                    Expected to reach by <strong>{{item.expectedTimeOfArrival | date: 'HH:mm'}}</strong>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="item.delay > 0" style="color:red">
+          Delayed by {{item.delay}} minutes. Originally scheduled reach {{item.to}} by {{item.scheduledTimeOfArrival}}. Reason: {{item.delayReason}}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
