--- a/Final/src/busstatus.component.html
+++ b/Final/src/busstatus.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6" *ngFor="let item of buses | async">
-    <div class="panel panel-default" click="(busSelected(item))">
+    <div class="panel panel-default" (click)="busSelected(item)">
       <div class="panel-heading">
         <h3 class="panel-title">{{item.from}} to {{item.to}}</h3>
       </div>
